--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -82,17 +82,18 @@
 	</div>
 
 <div class = "jumbotron">
+	<button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+<div class="social social-header">
+	<a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+	<a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+</div>
     <img class = "img-responsive" src="../images/3.JPG" alt="picture">
       <div class ="text-area">
         </br>
-        <h1 class = " text-center"> Sistah Space is run by volunteers.</h1>   <hr>
+        <h3 class = " text-center"> Sistah Space is run by volunteers.</h3>
         <h4 class = " text-center"> Most of the staff at Sistah Space are volunteers concerned with a cause of domestic abuse. THeir devote their time and resources helping those in need of support.</h4> </br>
       </div>
-      <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
-    <div class="social">
-      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
-      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
-    </div>
+
   </div>
 
 
@@ -100,57 +101,36 @@
     <div class="main-copy">
 
 
-<h1> Our team</h1>
-
+<h1 class="text-center green"> Our team</h1>
+<div class = our-team-container>
 <h3>Ngozi Fulani</h3> <h5>(CEO, IDVA, ISVA, Housekeeping)</h5>
 <p>Ngozi is the founder member of Sistah Space & is the senior member of staff in charge of day to day running. Ngozi qualified as an Independent Domestic Violence Advisor (IDVA) & an Independent Sexual Violence Advisor (ISVA). Ngozi handles all the case studies and one to one surgeries. </p>
-
+</br>
 <h2>Management Committee Members:</h2>
 <h3>Maxine Claye </h3> <h5>Management Committee Member (Chair)</h5>
 <p>Maxine is the founder of A Darker Shade, the unregistered charity outlet store that works very closely with Sistah Space.</p>
 <p>Maxine is in charge of the retail arm of Sistah Space.</p>
-
 <h3>Sistah Joseph</h3>
 <p>Management Commmitee Member (Housekeeping) & volunteer<p>
 <p>Sistah Joseph is tasked with making sure that service users and vistors alike are comfortable, cared for and otherwise refreshed, at Sistah Space.</p>
-
 <h3>Aaron Tanice</h3> <h5>Management Committee (Treasurer)</h5>
 <p>Aaron is one of our inhouse volunteers with a responsibility for safety of service users, staff and volunteers.</p>
 <p>Aaron holds a counselling degree and is one of the Sistah Space advisor in that regard.</p>
-
-<h3>Cynthia Oliver</h3> <h5> Management Committee (Secretary)</h5>
-
+<h3>Cynthia Oliver</h3> <h5> Management Committee Member (Secretary)</h5>
 <h3>Wendella B.</h3>
 <p>Management Committee Member (Housekeeping, volunteer)</p>
-
+</br>
 <h2>External support:</h2>
-
 <h5>Hackney CVS (Support)</h5>
-
 <h5>Carrise Forde (Sistah Space Ambassador)</h5>
-
 <h5>Djan Headley (Sistah Space youth Ambassador & workshop volunteer)</h5>
-
 <h5>Hugh Brown (Transport)</h5>
-
 <h5>Izabela Jelonek (Web design/media)</h5>
-
 <h5>Rosanna Muatta (occasional fundraising)</h5>
-
-<h5>Yvonne Williams (Management Commitee Member)</h5>
-
-<h5>Yvonne William (Finance Volunteer)</h5>
+<h5>Yvonne Williams (Management Commitee Member & Finance Volunteer)</h5>
 <br>
-
 <h4>In loving memory of Valerie Forde & baby Real-Jahzara</h4>
-
-
-
-<p class="text-align"> </p>
-<p class="text-align"> </p>
-
-
-
+</div>
 
 </div>
 <hr>
