--- a/pages/shop.html
+++ b/pages/shop.html
@@ -85,7 +85,7 @@
 
 <div class = "jumbotron">
  <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
-    <div class="social">
+    <div class="social social-header">
 
       <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
       <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
@@ -94,7 +94,7 @@
     <img class = "img-responsive" src="../images/shop 1.JPG" alt="picture">
       <div class ="text-area">
         </br>
-        <h1 class = " text-center"> Shop at Sistah Space.</h1> <hr>
+        <h3 class = " text-center"> Shop at Sistah Space.</h3>
         <h4 class=" text-center"> At Sistah Space we run a pop up shop to raise funds for our activities.
         </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
       </div>
@@ -108,7 +108,7 @@
   <p> We have a number of cultural, wellbeing books and CDs available. We also have a wide range of Survivor Dolls, watches and many other quality products. <p>
   <a href= http://www.ebay.co.uk/usr/sistah-space target="-blank"><p> Visit our Ebay page!</p></a>
 
-
+<div class = "shop-desktop">
   <div class="row">
     <div class="col-xs-6">
       <img class="img-responsive" id="shop1" src="../images/shop1.jpg">
@@ -119,7 +119,6 @@
 </div>
 <h2 class="text-center"> Cakes and donated items</h2>
 <hr>
-
  <div class="row">
     <div class="col-xs-6">
       <img class="img-responsive" src="../images/shop 3.JPG">
@@ -132,7 +131,7 @@
 <h2 class="text-center"> Handmade Survivior Dolls</h2>
 <hr>
 
- <div class="row">
+ <div class="row shop-desktop">
     <div class="col-xs-6">
       <img class="img-responsive" src="../images/red.jpg">
     </div>
@@ -142,6 +141,27 @@
 </div>
 <h2 class="text-center">  Watches donated by <a href = "http://www.mosaiqe.com/">Mosaiqe </a></h2>
 <hr>
+</div>
+
+<div class = "shop-mobile">
+<div class="row">
+    <img class="img-responsive" id="shop1" src="../images/shop1.jpg">
+  </div>
+<h2 class="text-center"> Cakes and donated items</h2>
+<hr>
+
+<div class="row">
+   <img class="img-responsive" src="../images/SAM_2185.JPG">
+  </div>
+<h2 class="text-center"> Handmade Survivior Dolls</h2>
+<hr>
+
+<div class="row">
+    <img class="img-responsive" src="../images/red.jpg">
+  </div>
+<h2 class="text-center">  Watches donated by <a href = "http://www.mosaiqe.com/">Mosaiqe </a></h2>
+<hr>
+</div>
 
 <div class="row">
   <div class="col-xs-6">
