--- a/pages/advice.html
+++ b/pages/advice.html
@@ -82,18 +82,15 @@
   </div>
 
 <div class = "jumbotron">
- <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
-    <div class="social">
-
-      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
-      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
-    </div>
-
-
+  <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+  <div class="social social-header">
+    <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+    <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+  </div>
     <img class = "img-responsive" src="../images/3.JPG" alt="picture">
       <div class ="text-area">
         </br>
-        <h1 class = " text-center">We provide advice to victims of abuse and their families.</h1> <hr>
+        <h3 class = " text-center">We provide advice to victims of abuse and their families.</h3>
         <h4 class=" text-center "> We provide support and advice to victims of domestic abuse and their family and friends. We offer guidance to everyone, regardless their gender and ethnicity.</h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
       </div>
       </div>
