--- a/pages/contact.html
+++ b/pages/contact.html
@@ -85,48 +85,20 @@
 
 <div class = "jumbotron">
  <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
-    <div class="social">
+    <div class="social social-header">
 
       <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
       <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
     </div>
 
-      <div class ="text-area">
+      <div class = "container-main">
         </br>
-        <h1 class = " text-center"> Contact us</h1>   <hr>
-
+        <h1 class = "text-center green"> Contact us</h1>   <hr>
         <div class = "container">
+        <h4> Our address </h4>
+        <h4>Telephone number</h4>
+        <h4>Email</h4>
 
-       <div class="container">
-<div class="col-md-5">
-
-    <div class="form-area">
-        <form role="form" id="contactForm">
-        <br style="clear:both">
-                    <h3 style="margin-bottom: 25px; text-align: center;">Contact Us</h3>
-            <div class="form-group">
-            <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
-          </div>
-                    <div class="form-group">
-                    <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
-
-                    </div>
-
-        <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Submit Form</button>
-        <div id="msgSubmit" class="h3 text-center hidden">Message Submitted!</div>
-        </form>
-    </div>
-</div>
-</div>
 
         </div>
 
