--- a/pages/news.html
+++ b/pages/news.html
@@ -39,67 +39,65 @@
 <body>
 
   <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar">
-   <div class="container">
-     <div class="navbar-header">
-       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-       </button>
-       <a href="../index.html" class="navbar-brand"> Sistah Space</a>
-     </div>
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a href="../index.html" class="navbar-brand"> Sistah Space</a>
+      </div>
 
-     <div class="collapse navbar-collapse" id="navbar-collapse">
-       <ul class="nav navbar-nav" >
-         <li class = "dropdown">
-           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
-           <ul class="dropdown-menu">
-             <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
-             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-             <li><a href="../pages/our_team.html">Who are we?</a></li>
-             <li><a href="../pages/history.html">Background history</a></li>
-           </ul>
-         </li>
-         <li class = "dropdown">
-           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How we can help<span class="caret"></span></a>
+      <div class="collapse navbar-collapse" id="navbar-collapse">
+        <ul class="nav navbar-nav" >
+          <li class = "dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
+              <li><a href="../pages/abuse.html">What is abuse?</a></li>
+              <li><a href="../pages/our_team.html">Who are we?</a></li>
+              <li><a href="../pages/history.html">Background history</a></li>
+            </ul>
+          </li>
+          <li class = "dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How we can help<span class="caret"></span></a>
 
-           <ul class = "dropdown-menu">
-             <li><a href="../pages/advice.html"> Advice </a></li>
-             <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li>
-           </ul>
-         </li>
-         <li class="dropdown">
-           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How you can help<span class="caret"></span></a>
-           <ul class = "dropdown-menu">
-             <li><a href="../pages/donations.html"> Donate </a></li>
-             <li><a href="../pages/volunteer.html"> Volunteer </a></li>
-             <li><a href="../pages/shop.html"> Shop </a></li>
-           </ul>
-         </li>
-         <li><a href="../pages/news.html">News</a></li>
-       </ul>
-       <ul class="nav navbar-nav navbar-right">
-         <li><a href="../pages/contact.html">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li>
-       </ul>
-     </div>
-   </div>
- </div>
- <div class = "jumbotron">
-  <div class ="text-area">
-  </br>
-  <h1 class = " text-center"> Sistah Space news</h1>   <hr>
-</div>
-<button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
-<div class="social">
-  <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
-  <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
-</div>
+            <ul class = "dropdown-menu">
+              <li><a href="../pages/advice.html"> Advice </a></li>
+              <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How you can help<span class="caret"></span></a>
+            <ul class = "dropdown-menu">
+              <li><a href="../pages/donations.html"> Donate </a></li>
+              <li><a href="../pages/volunteer.html"> Volunteer </a></li>
+              <li><a href="../pages/shop.html"> Shop </a></li>
+            </ul>
+          </li>
+          <li><a href="../pages/news.html">News</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="../pages/contact.html">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class = "jumbotron">
+    <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+    <div class="social social-header">
+      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+    </div>
+    <div>
+  </div>
 </div>
 
 <div class="container-main">
   <div class ="container">
 
-    <h2 class="text-center"> News </h3>
+    <h1 class="text-center green"> Sistah Space News </h1>
       <div class="news-field">
         <div class="text-center">
           <h3 class="text-center"> <u> <b> Important information! </b> </u> </h3>
@@ -132,9 +130,11 @@
                 <div class = "col-md-4">
                   <img class="img-responsive news-pic" src="../images/sewing_class.jpg">
                 </div>
-              </div> 
-
+              </div>
+              <hr>
             </div>
+          </div>
+        </div>
             <footer class="footer">
               <div class="container">
                 <p class = "text-right"><strong>Sistah Space 2016</strong></p>
@@ -145,14 +145,14 @@
             </div>
 
             <script>
-              (function() {
-                function onEscapeClick() {
-                  document.write('');
-                  window.location = "http://youtube.co.uk"
-                }
+            (function() {
+              function onEscapeClick() {
+                document.write('');
+                window.location = "http://youtube.co.uk"
+              }
 
-                document.getElementById('escape').addEventListener('click', onEscapeClick)
-              }())
+              document.getElementById('escape').addEventListener('click', onEscapeClick)
+            }())
 
             </script>
 
