--- a/pages/volunteer.html
+++ b/pages/volunteer.html
@@ -84,18 +84,19 @@
   </div>
 
 <div class = "jumbotron">
+  <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+  <div class="social social-header">
+
+   <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+   <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+ </div>
 <img class = "img-responsive" src="../images/5.JPG" alt="picture">
 <div class ="text-area">
 </br>
-<h1 class = " text-center"> Sistah Space is a sanctuary for survivors of domestic abuse.</h1> <hr>
+<h3 class = " text-center"> Sistah Space is a sanctuary for survivors of domestic abuse.</h3>
 <h4 class=" text-center"> We provide immediate support and work with community to raise awareness of abuse.  </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
 </div>
- <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
- <div class="social">
 
-  <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
-  <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
-</div>
 </div>
 
 <div class = "container container-main main-copy">
