padding on mobile fix

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </div>
 
 
-<div class = "container container-main">
+<div class = "container-main">
   <div class = "row">
     <h1 class = "text-center "> Welcome to Sistah Space! </h1>
     <div class = "col-md-3">
@@ -227,7 +227,7 @@
             <div class = "col-md-4">
               <img class="img-responsive news-pic" src="images/sewing_class.jpg">
             </div>
-           </div> 
+           </div>
             <a href="pages/news.html"><p class="text-center">Click here to view more news stories...</p></a>
             <hr>
 
