--- a/pages/history.html
+++ b/pages/history.html
@@ -95,7 +95,7 @@
   </div>
   </div>
 
-<div class = "container-main main-copy">
+<div class = "container-main">
 
 <h2>The history</h2>
     <p class="text-justify">Many UK born or raised African heritage people grew up in time when only white men were teachers, head teachers, vicars, bank managers, police. It was almost unheard of for an African heritage woman or man to be a marriage registrar or hold any other similar role. All high profile jobs were predominantly done by white men. In contrast, African heritage people were doing all the menial jobs, like cleaning, factory work and in particular, railway and London Transport jobs.</p>
@@ -112,11 +112,7 @@
   <li>Services not understanding African and Caribbean culture, and therefore not suitable for African heritage survivors.</li>
   <li>Insufficient adequate resources or places that reflect their cultural heritage.</li>
 </ul>
-
 <hr>
-
-</div>
-
 </div>
 
 <footer class="footer">
