--- a/pages/news.html
+++ b/pages/news.html
@@ -97,7 +97,7 @@
 <div class="container-main">
   <div class ="container">
 
-    <h1 class="text-center green"> Sistah Space News </h1>
+    <h1 class="text-center red"> Sistah Space News </h1>
       <div class="news-field">
         <div class="text-center">
           <h3 class="text-center"> <u> <b> Important information! </b> </u> </h3>
