--- a/pages/shop.html
+++ b/pages/shop.html
@@ -100,10 +100,7 @@
       </div>
       </div>
 
-  <div class="container ">
-    <div class=" main-copy">
-
-
+  <div class="container-main">
   <p> At Sistah Space we run a shop to raise funds for our activities. We sell donated items and organise cake sales.</p>
   <p> We have a number of cultural, wellbeing books and CDs available. We also have a wide range of Survivor Dolls, watches and many other quality products. <p>
   <a href= http://www.ebay.co.uk/usr/sistah-space target="-blank"><p> Visit our Ebay page!</p></a>
@@ -174,7 +171,6 @@
 
 <hr>
 
-</div>
 </div>
 
 <footer class="footer">
