--- a/pages/volunteer.html
+++ b/pages/volunteer.html
@@ -99,7 +99,7 @@
 
 </div>
 
-<div class = "container container-main main-copy">
+<div class = "container container-main">
   <p>Sistah Space is able to run its day to day activities thanks to volunteers who devote their times and resources. </p>
 </div>
 
