images on shop not displaying

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -108,10 +108,10 @@
 <div class = "shop-desktop">
   <div class="row">
     <div class="col-xs-6">
-      <img class="img-responsive" id="shop1" src="../images/shop1.jpg">
+      <img class="img-responsive" src="../images/shop1.JPG">
     </div>
     <div class="col-xs-6">
-      <img class="img-responsive" id="shop2" src="../images/SAM_2190.JPG">
+      <img class="img-responsive" src="../images/SAM_2190.JPG">
     </div>
 </div>
 <h2 class="text-center"> Cakes and donated items</h2>
