--- a/pages/shop.html
+++ b/pages/shop.html
@@ -161,12 +161,8 @@
 </div>
 
 <div class="row">
-  <div class="col-xs-6">
-    <a href= http://www.ebay.co.uk/usr/sistah-space target="-blank"><h3 class="text-right"> Visit our page on....</h3>
-  </div>
-  <div class="col-xs-6">
-    </a><img src="../images/ebay.png" class="img-responsive ebay-logo">
-  </div>
+    <a href= http://www.ebay.co.uk/usr/sistah-space target="-blank"><h3 class="text-center"> Visit our page on</h3>
+    <img src="../images/ebay.png" class="img-responsive ebay-logo"></a>
 </div>
 
 <hr>
