--- a/pages/shop.html
+++ b/pages/shop.html
@@ -91,7 +91,7 @@
       <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
     </div>
 
-    <img class = "img-responsive" src="../images/shop 1.JPG" alt="picture">
+    <img class = "img-responsive" src="../images/2.JPG" alt="picture">
       <div class ="text-area">
         </br>
         <h3 class = " text-center"> Shop at Sistah Space.</h3>
