abuse page changes

--- a/pages/abuse.html
+++ b/pages/abuse.html
@@ -98,11 +98,25 @@
 
   <div class="container-main">
       <h2> What is abuse?</h2>
-        <p class="text-align">Lorem ipsum dolor sit amet, volutpat nam cursus in dictum sed, urna ultrices donec imperdiet ultrices dolor tincidunt, convallis wisi a ornare et, mauris nam urna nunc arcu ut. Sit ridiculus accumsan sed lorem feugiat, leo mi eiusmod, ultricies cum sit. Tempor sed sit, risus purus suscipit, vivamus sollicitudin.</p>
-        <p class="text-align"> Ut nulla, class fermentum vitae blandit erat in, cursus suspendisse, non vel in imperdiet justo at. Vehicula felis curabitur viverra pellentesque tempus, velit eu justo dapibus ipsum ultrices congue, ut nec fusce suscipit ipsum fames adipiscing, integer el. Often there are warning signs, but sometimes there are none. </p>
+        <p class="text-justify">According to the UK's government definition domestic violence and abuse is:</p>
+        <blockquote> "...any incident or pattern of incidents of controlling, coercive, threatening behaviour, violence or abuse between those aged 16 or over who are, or have been, intimate partners or family members regardless of gender or sexuality. The abuse can encompass, but is not limited to:
 
+        <ul><li>psychological</li>
+        <li>physical</li>
+        <li>sexual</li>
+        <li>financial</li>
+        <li>emotional"</li></ul></blockquote>
+
+        <p class="text-justify"> For more information visit <a href="https://www.gov.uk/guidance/domestic-violence-and-abuse" target="_blank"> Government's guidence on domestic violence and abuse.</a>
+
+        <p class="text-justify">Well, the answer is as the Home Office has described but it is not always so cut and dried. Many people think that because they have not been physically attacked (violence), it isn't domestic abuse. Others believe that domestic abuse can only be between intimate partners such as husband, wife, boyfriend/girlfriend. In fact domestic abuse occures between mother to son, sisters and brothers and any combination of family, including ex partners.</p>
+        <p class="text-justify">It is common for some victims of domestic abuse to normalise abusive behaviour. For example, in some relationships, the partner will take the wages of his partner and she is not allowed to protest or decide what her money should be spent on. Another example is the constant threat from one partner who may have British Citizenship or Indefinate Leave to Remain (ILR) may threaten a partner who does not have legal or longterm status with immigration or deportation if they do not conform to their (the abusive partner) wishes.  </p>
+        <hr>
         <h2> How to spot the warning signs</h2>
-        <p class="text-align"> Warning signs might be diffult to spot and it might be difficult for victims themselves to realise and admin that they are in an abusive relationship. Hence, often victims of abuse do not ask for help.</p>
+          <blockquote>Often there are warning signs, but sometimes there are none. </blockquote>
+        <p class="text-justify"> Warning signs might be diffult to spot and it might be difficult for victims themselves to realise and admit that they are in an abusive relationship. Hence, often victims of abuse do not ask for help.</p>
+        <br>
+
 
 <div class="container">
   <div class="row">
@@ -117,9 +131,7 @@
           	<li>If he controls the finances and pretty much everything, including what you wear and where you go.</li>
           	<li>He phones you constantly and tries to monitor your movements</li>
           	<li>He presents as a very nice person to the rest of the world.</li>
-          	<li>He embarrasses you in front of others.</li>
-          	<li>He blames her for the abuse</li>
-          	<li>He is verbally abusive</li>
+          	<li>He embarrasses you in front of others</li>
 
           </ul>
     </div>
@@ -128,9 +140,10 @@
       <h3> Signs of abuse </h3>
         <ul>
           <li>He is verbally abusive</li>
+          <li>He blames you for the abuse</li>
           <li>He makes threats against you or family members if you report abuse or threaten to leave.</li>
           <li>You change your behaviour to keep the peace.</li>
-          <li>The 'vibe' in your house depends on the mood he is in.</li>
+          <li>The 'vibe' in your house depends on the mood he is in</li>
           <li>He forces you to have sex or you relent for fear of what may happen if you don't comply</li>
           <li>Abusive behaviour including threatening, destroying furniture or your possessions</li>
           <li>Threatening to report you to immigration (if you don't have leave to remain)</li>
@@ -140,7 +153,9 @@
         </ul>
     </div>
   </div>
+  <h4>If you feel that you are or might be a victim of abuse and would like to talk about it, <a href="..pages/contact.html"> contact an advisor at Sistah Space.</a><h4>
 </div>
+<hr>
 </div>
 
 <footer class="footer">
