--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
 
 <div class = "container-main">
   <div class = "row">
-    <h1 class = "text-center "> Welcome to Sistah Space! </h1>
+    <h1 class = "text-center "> Welcome to Sistah Space! </h1><hr>
     <div class = "col-md-3">
       <img class= "logo img-responsive" src= "images/logo.jpg" alt= "Sistah Space logo">
     </div>
-    <div class = "col-md-9">
+    <div class = "col-md-9 intro">
     </br></br>
-    <h4 class = "text-justify"> Sistah Space is a community based initiative that supports African heritage women and girls.</h4>
-    <h4 class = "text-justify"> Founded in October/Novermber 2015, Sistah Space was created to bridge the gap in domestic abuse services for grassroots and all other African heritage women and girls.</h4>
-    <h4 class = "text-justify"> We work with our local community and services to raise awareness of domestic and sexual abuse.</h4>
+    <h4 class = "text-center"> Sistah Space is a community based initiative that supports African heritage women and girls.</h4>
+    <h4 class = "text-center"> Founded in October/Novermber 2015, Sistah Space was created to bridge the gap in domestic abuse services for grassroots and all other African heritage women and girls.</h4>
+    <h4 class = "text-center"> We work with our local community and services to raise awareness of domestic and sexual abuse.</h4>
   </div>
 </div>
 <div class="social social-intro">
