our team update

--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -104,18 +104,21 @@
 <p>Ngozi is the founder member of Sistah Space & is the senior member of staff in charge of day to day running. Ngozi qualified as an Independent Domestic Violence Advisor (IDVA) & an Independent Sexual Violence Advisor (ISVA). Ngozi handles all the case studies and one to one surgeries. </p>
 </br>
 <h2>Management Committee Members:</h2>
-<h3>Maxine Claye </h3> <h5>Management Committee Member (Chair)</h5>
-<p>Maxine is the founder of A Darker Shade, the unregistered charity outlet store that works very closely with Sistah Space.</p>
-<p>Maxine is in charge of the retail arm of Sistah Space.</p>
-<h3>Sistah Joseph</h3>
-<p>Management Commmitee Member (Housekeeping) & volunteer<p>
-<p>Sistah Joseph is tasked with making sure that service users and vistors alike are comfortable, cared for and otherwise refreshed, at Sistah Space.</p>
-<h3>Aaron Tanice</h3> <h5>Management Committee (Treasurer)</h5>
-<p>Aaron is one of our inhouse volunteers with a responsibility for safety of service users, staff and volunteers.</p>
-<p>Aaron holds a counselling degree and is one of the Sistah Space advisor in that regard.</p>
-<h3>Cynthia Oliver</h3> <h5> Management Committee Member (Secretary)</h5>
-<h3>Wendella B.</h3>
-<p>Management Committee Member (Housekeeping, volunteer)</p>
+<h3>Yvonne Roberts</h3> <h5>Chair</h5>
+<h3>Aaron Tanice </h3><h5>Treasurer</h5>
+<h3>Cynthia Oliver </h3><h5>Secretary</h5>
+<h3>Carrise Forde </h3><h5>Trustee/Ambassador</h5>
+<h3>Maxine Clay </h3><h5>Trustee/Survivor Dolls & Muffins</h5>
+<h3>Adeline Brade/Sis Jo </h3><h5>Trustee</h5>
+<h3>Wendella B.</h3> <h5>Community member/Volunteer</h5>
+<h3>Rosanna </h3><h5>Community Volunteer in charge of fundraising.</h5>
+
+<h4>Sistah Space are proud members of Hackney Women's Haven, a partnership funded by the Big Lottery Fund (BLF)
+<ul><li>Claudia Jones Organisation (Lead Organisation)</li>
+<li>CHackney CVS</li>
+<li>CHaha Trust</li>
+<li>CRise Community Action</li>
+<li>CHackney Women's Forum</li></h4>
 </br>
 <h2>External support:</h2>
 <h5>Hackney CVS (Support)</h5>
