--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -100,10 +100,10 @@
   <div class="container-main">
 <h1 class="text-center green"> Our team</h1>
 <div class = our-team-container>
-<h3>Ngozi Fulani</h3> <h5>(CEO, IDVA, ISVA, Housekeeping)</h5>
+<h3>Ngozi Fulani</h3> <h5>(CEO, IDVA, ISVA)</h5>
 <p>Ngozi is the founder member of Sistah Space & is the senior member of staff in charge of day to day running. Ngozi qualified as an Independent Domestic Violence Advisor (IDVA) & an Independent Sexual Violence Advisor (ISVA). Ngozi handles all the case studies and one to one surgeries. </p>
 </br>
-<h2>Management Committee Members:</h2>
+<h2>Management Committee Members / Trustees:</h2>
 <h3>Yvonne Roberts</h3> <h5>Chair</h5>
 <h3>Aaron Tanice </h3><h5>Treasurer</h5>
 <h3>Cynthia Oliver </h3><h5>Secretary</h5>
