--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </div>
 </div>
 
-<div class = "jumbotron">
+<div class = "jumbotron jumbotron-index">
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
     <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
@@ -200,7 +200,8 @@
       <h3 class="text-center"> <u> <b> Important information! </b> </u> </h3>
       <h4 class="text-center">  As part of a newly funded partnership, Sistah Space will be launching as part of Hackney Women's Haven. </h4>
       <ul class="date-and-time">
-        <li><h4>  <b>Date:</b> 8th of October 2016 </h4></li>
+        <li><h4>  <b>Date:</b> 25th of November 2016 </h4>
+      <p>  in celebration of <b> International Day for the Elimination of Violence against Women</b> <p></li>
         <li><h4> <b>Time:</b> 2pm-7pm </h4></li>
       </ul>
       <h4> <b>Venue:</b> Claudia Jones Organisation, 8 Palatine Road, Stoke Newington N16 8SX </h4>
