--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
   <div class = "col-sm-6 ">
     <figure class="figure">
       <img class="valerie picture-holder figure-img  img-responsive center-block" src= "images/valerie.jpg" alt="Picutre of Valerie F.">
-      <figcaption class= "figure-caption text-center"> Valerie Ford and her daughter. </figcaption>
+      <figcaption class= "figure-caption text-center"> Valerie Forde and her daughter. </figcaption>
     </figure>
   </div>
 </div>
