--- a/pages/advice.html
+++ b/pages/advice.html
@@ -96,11 +96,19 @@
       </div>
 
   <div class="container-main">
-  <h2 >Sistah Space</h2>
-  <p> Sistah Space is a safe space in our community where surviours of domestic violence and abuse can receive help and support their need.</p>
-    <p> Although Sistah Spaces caters mainly for Black heritage women we offer our help to .</p>
-</div>
+  <h2 class="text-center" >Coming to Sistah Space for help</h2></br>
+  <p class="text-justify">If you suddenly find yourself in a domestic abuse situation, it is difficult to know where to start, who to turn to or trust. There are so many organisations and things to consider, including choices that will effect not only you, but your children and other family members, your work, the children's education and so on. Come and talk to us. We can offer advice on:
+  <ul><li>The different types of <b>COURTS AND SERVICES</b> available to survivors of domestic abuse</li>
+  <li><b>OBTAINING A COURT ORDER</b> (such as Non Molestation orders) and explaining how to apply and what you need to evidence</li>
+  <li><b>SAFEGUARDING</b></li>
+  <li><b>STAYING SAFE </b>if you wish to remain in your home with or without the perpetrator</li>
+  <li><b>OPTIONS: </b>What happens when you go to court, Social Services, GP, MARAC or any other service provider</li></ul></br>
+  <p class="text-justify">We may be able to offer you advocacy and advice on practical matters or just offer you somebody to talk to</p>
+  <p class="text-justify">We are also part of the Hackney Women's Haven partnership, with 5 other partners who also have their specialist areas of expertise (example, Female Genital Mutilation FGM) which we are happy to refer clients to if they choose.</p>
+  <h4 class="text-center" > If need help for yourself or someone close to you <a href="..pages/contact.html">contact us</a>.</h4><hr>
 
+<hr>
+</div>
 <footer class="footer">
   <div class="container">
     <p class = "text-right"><strong>Sistah Space 2016</strong></p>
