--- a/pages/donations.html
+++ b/pages/donations.html
@@ -93,13 +93,13 @@
       <div class ="text-area">
         </br>
         <h3 class = " text-center">We can't do our work without your help</h3>
-        <h4 class=" text-center"> We rely on donations to be able to run over services helping victims of domestic abuse. </h4><br>
+        <h4 class=" text-center"> We rely on donations to be able to run over services helping victims of domestic abuse </h4><br>
       </div>
 
   </div>
 
 <div class="container-main">
-  <h2 >Help us by donating</h2>
+  <h2 class="text-center">Donate to help us run Sistah Space</h2>
 
 <p class= "text-justify">Sistah Space started without any finances at all. It was very hard and we relied heavily on goodwill of our local community and the wider public. We could not have helped so many people without you and we are grateful for your support thus far. Donations are essential for us to keep delivering the unique service that we offer that caters for African heritage women and girls. It will help us provide a safe venue where survivors/victims and their families can get the support they so desperately need. </p>
 
@@ -109,15 +109,23 @@
 
 <a href = " http://uk.virginmoneygiving.com/fund/sistahspace" target="_blank"> <h4 class="text-center">Virgin Money Giving - fundraising site</h4> </a>
 <hr>
-
+<div class="news-field">
+  <h4 class="text-center">We now have collection buckets and small containers, if you are happy to have one at your place of business, please email us. </h4>
+</div>
+</br>
 <div class="row">
   <div class="col-md-6">
     <img src="../images/pic1.jpg" class="img-responsive">
     <p>Hannah Griffiths delivers a cheque for over &pound300 to Sistah Space. The money was raised on our behalf by Hannah's wonderful husband who ran the Hackney marathon.</p>
-  </br></div>
-  <div class ="col-md-6">
     <img src="../images/lush.jpg" class="img-responsive">
     <p>Lush have donated a range of their products to Sistah Space.</p>
+  </br></div>
+  <div class ="col-md-6">
+    <p class="text-justify">It cost a considerable amount of money to support so many survivors, pay associated costs of running a building, travel and food for service users and volunteers and other costs. We have a limited income and need to raise funds for several necessities. </p>
+    <p class="text-justify">A vehicle is perhaps our single most expensive purchase, but it is one of the most needed. As winter approaches, it has become increasingly difficult to do outreach work, get to a crisis situation/Sistah Space in a short space of time and collect donated items. Coupled with the fact that many of our calls for assistance are after hours and at weekends. We are not concerned with the look of the vehicle, only that it is safe and reliable. </p>
+    <p class="text-justify">Sistah Space were the first to begin the UNDERGARMENT, TOILETRIES AND OTHER PERSONAL ITEMS CAMPAIGN. This was to accommodate the survivors who had to leave their home without notice because of domestic violence/abuse and were unable to afford or collect personal items. THIS APPEAL IS ONGOING and we request items such as knickers, bras, cosmetics and any other brand new products. Please ensure to donate brand new items, we have offers of nearly new and hardly worn items which we respectfully decline. Our survivors depend on us to treat them with dignity and kindness, your help in ensuring that they are gifted new items is very much appreciated. </p>
+    <p class="text-justify">If you are donating finance to a specific cause (i.e vehicle, Xmas appeal etc), please indicate which cause you would like the donation to support.</p>
+
   </div>
 </div>
   <hr>
