--- a/pages/history.html
+++ b/pages/history.html
@@ -90,8 +90,8 @@
   <img class = "img-responsive" src="../images/6.JPG" alt="picture">
   <div class ="text-area">
     </br>
-    <h3 class = " text-center"> Sistah Space is striving to truly represent African heritage women. </h3>
-    <h4 class=" text-center "> We provide support needed ... </h4> <br>
+    <h3 class = " text-center"> The repercussion of the area when Black women when lawfully discriminated is still very much felt today. </h3>
+    <h4 class=" text-center "> That's why victims of abuse may be extremely reluctant to report a crime and reach out for help. </h4> <br>
   </div>
   </div>
 
