--- a/pages/volunteer.html
+++ b/pages/volunteer.html
@@ -93,14 +93,23 @@
 <img class = "img-responsive" src="../images/5.JPG" alt="picture">
 <div class ="text-area">
 </br>
-<h3 class = " text-center"> Sistah Space is a sanctuary for survivors of domestic abuse.</h3>
-<h4 class=" text-center"> We provide immediate support and work with community to raise awareness of abuse.  </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
+<h3 class = " text-center"> We are a community based organisation and try to include the community as much as possible.</h3>
+<h4 class=" text-center"> We encourage volunteers from the community to assist us in several areas.  </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
 </div>
 
 </div>
 
 <div class = "container container-main">
-  <p>Sistah Space is able to run its day to day activities thanks to volunteers who devote their times and resources. </p>
+  <h2 class="text-center">The following volunteers are currently needed:</h2>
+  <ul><li><h3>Qualified Counsellors </h3> to support the survivors and their families as well as the volunteers</li>
+  <li><h3> Admin support</h3> to write reports, record activities,keep monitoring forms and monitor items that are donated to survivors </li>
+  <li><h3>Home-keepers</h3>to keep the sanctuary stocked, clean, tidy and welcoming </li>
+  <li><h3>Drivers</h3> we are always looking for support in this area. It may be to collect and drop off or to transport volunteers and victims</li>
+  <li><h3>First-response</h3> Sistahs-In-Service (SIS) who are willing and able to support the supporters </li>
+  <li><h3>Fundraisers</h3> we need supporters to host fundraising events to help raise funds for Sistah Space </li>
+  <li><h3>Event co-ordinators</h3> to organise and run the weekly/fortnightly film and social nights <br>
+  We would be very grateful if event holders would consider donating the use of a stall for Sistah Space to raise funds.</li></ul></br>
+  <h4 class="text-center" > If would like to help us in one the above mentioned roles <a href="..pages/contact.html">contact us</a>.</h4><hr>
 </div>
 
 <footer class="footer">
